--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
       <!-- <a class="btn btn-primary btn-cta rounded-pill btn-lg my-3" href="/docs/{{ if site.Params.doks.docsVersioning }}{{ site.Params.doks.docsVersion }}/{{ end }}guides/example-guide/" role="button">{{ i18n "get_started" }}</a> -->
-      <a class="btn btn-primary btn-cta rounded-pill btn-lg my-3" href="/Porfolio/" role="button">Porfolio</a>
+      <a class="btn btn-primary btn-cta rounded-pill btn-lg my-3" href="/rootcertify/Porfolio/" role="button">Porfolio</a>
       {{ .Content }}
     </div>
   </div>
